test/corpus/designatorconst.txt
====
Single Ident Ident Designator Const Declaration
====

MODULE BasicConst;
  CONST MyConst = OtherConst ;
END BasicConst.

----

(compilation_unit
  (program_module
    (program_module_header
      (kModule)
      modulename: (ident))
    (block
      (declaration
        (const_declaration
          (kConst)
          (constant_declaration
            const_id: (ident)
            (const_expression
              (expression
                (simple_expression
                  (term
                    (factor
                      (designator
                        (qualident
                          qualifier_or_id: (ident)))))))))))
      (kEnd))
    (module_footer
      modulename: (ident))))

====
Single Ident Qualified Designator Const Declaration
====

MODULE BasicConst;
  CONST MyConst = ModuleName.OtherConst ;
END BasicConst.

----

(compilation_unit
  (program_module
    (program_module_header
      (kModule)
      modulename: (ident))
    (block
      (declaration
        (const_declaration
          (kConst)
          (constant_declaration
            const_id: (ident)
            (const_expression
              (expression
                (simple_expression
                  (term
                    (factor
                      (designator
                        (qualident
                          qualifier_or_id: (ident)
                          qualified: (ident)))))))))))
      (kEnd))
    (module_footer
      modulename: (ident))))
